syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example";

service AirQualityService {
  rpc GetAirQualityIndex (AirQualityRequest) returns (AirQualityResponse) {}
}

message AirQualityRequest {
  // Add any necessary fields here
  // For example, location information
  string location = 1;
}

message AirQualityResponse {
  // Add the fields you want to return here
  // For example, the air quality index value
  int32 air_quality_index = 1;
}
